...
            "state" : "translated",
            "value" : "Календар"
          }
        }
      }
    },
    "Cancel" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Cancel"
          }
...
            "state" : "translated",
            "value" : "Не вказуйте номери рахунків, баланси, деталі транзакцій, токени Monobank чи приватну фінансову інформацію."
          }
        }
      }
    },
    "Done" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Done"
          }
...
            "state" : "translated",
            "value" : "Повідомити про помилку чи запропонувати покращення"
          }
        }
      }
    },
    "Report Feedback" : {
      "extractionState" : "stale",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Report Feedback"
...
            "state" : "translated",
            "value" : "Надсилання звітів зараз вимкнено."
          }
        }
      }
    },
    "Reporting is not configured yet." : {
      "extractionState" : "stale",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Reporting is not configured yet."
...
